[#624] Fix case bar overflow

--- a/frontend/src/pages/cases/layout/case-wrapper.scss
+++ b/frontend/src/pages/cases/layout/case-wrapper.scss
@@ -133,7 +133,7 @@
   }
 }
 
-@media (max-height: 719px) {
+@media (max-height: 720px) {
   .case-sidebar-container {
     overflow: auto;
     height: 95vh;
